recursion.logo.koch.Koch.scala.error
Compilation error:
Koch:21: error: not found: value snowside
    snowside(levels-1,length/3)
    ^Koch:23: error: not found: value snowside
    snowside(levels-1,length/3)
    ^